--- a/requirements.prod.txt
+++ b/requirements.prod.txt
@@ -1,7 +1,9 @@
 flask==3.1.1
 gunicorn==21.2.0
 colorama==0.4.6
-werkzeug==3.1.0
+werkzeug==3.1.3
 openpyxl==3.1.5
 pandas==2.2.3
-requests==2.31.0 
+requests==2.31.0
+flask-cors==6.0.0
+python-dotenv==1.1.0 
